docs/evidence/pre-engagement/kyverno-policies.yaml
apiVersion: v1
items:
- apiVersion: kyverno.io/v1
  kind: ClusterPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"kyverno.io/v1","kind":"ClusterPolicy","metadata":{"annotations":{"policies.kyverno.io/category":"Best Practice","policies.kyverno.io/severity":"low","policies.kyverno.io/title":"Add Default Resources"},"name":"add-default-resources"},"spec":{"background":true,"rules":[{"match":{"resources":{"kinds":["Pod"],"namespaces":["hephastos"]}},"mutate":{"patchStrategicMerge":{"spec":{"containers":[{"(name)":"*","resources":{"limits":{"cpu":"200m","memory":"256Mi"},"requests":{"cpu" [...]
      policies.kyverno.io/category: Best Practice
      policies.kyverno.io/severity: low
      policies.kyverno.io/title: Add Default Resources
    creationTimestamp: "2026-08-09T03:10:36Z"
    generation: 2
    name: add-default-resources
    resourceVersion: "3005848"
    uid: 911d9d5d-c0e5-47fb-be92-8b1145fa597f
  spec:
    admission: true
    background: true
    emitWarning: false
    rules:
    - match:
        resources:
          kinds:
          - Pod
          namespaces:
          - hephastos
      mutate:
        patchStrategicMerge:
          spec:
            containers:
            - (name): '*'
              resources:
                limits:
                  cpu: 2000m
                  memory: 2048Mi
                requests:
                  cpu: 400m
                  memory: 512Mi
      name: default-resources
      skipBackgroundRequests: true
    validationFailureAction: Enforce
  status:
    autogen:
      rules:
      - match:
          resources:
            kinds:
            - apps/v1/DaemonSet
            - apps/v1/Deployment
            - batch/v1/Job
            - apps/v1/ReplicaSet
            - v1/ReplicationController
            - apps/v1/StatefulSet
            namespaces:
            - hephastos
        mutate:
          patchStrategicMerge:
            spec:
              template:
                spec:
                  containers:
                  - (name): '*'
                    resources:
                      limits:
                        cpu: 2000m
                        memory: 2048Mi
                      requests:
                        cpu: 400m
                        memory: 512Mi
        name: autogen-default-resources
        skipBackgroundRequests: true
      - match:
          resources:
            kinds:
            - batch/v1/CronJob
            namespaces:
            - hephastos
        mutate:
          patchStrategicMerge:
            spec:
              jobTemplate:
                spec:
                  template:
                    spec:
                      containers:
                      - (name): '*'
                        resources:
                          limits:
                            cpu: 2000m
                            memory: 2048Mi
                          requests:
                            cpu: 400m
                            memory: 512Mi
        name: autogen-cronjob-default-resources
        skipBackgroundRequests: true
    conditions:
    - lastTransitionTime: "2026-09-16T08:25:52Z"
      message: Ready
      reason: Succeeded
      status: "True"
      type: Ready
    rulecount:
      generate: 0
      mutate: 1
      validate: 0
      verifyimages: 0
    validatingadmissionpolicy:
      generated: false
      message: ""
- apiVersion: kyverno.io/v1
  kind: ClusterPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"kyverno.io/v1","kind":"ClusterPolicy","metadata":{"annotations":{"policies.kyverno.io/category":"Pod Security","policies.kyverno.io/severity":"high","policies.kyverno.io/title":"Block Host Access"},"name":"block-host-access"},"spec":{"background":true,"rules":[{"match":{"resources":{"kinds":["Pod"],"namespaces":["hephastos"]}},"name":"check-hostpath","validate":{"message":"hostPath volumes are blocked. Use PVCs instead.","pattern":{"spec":{"=(volumes)":[{"X(hostPath)":"nul [...]
      policies.kyverno.io/category: Pod Security
      policies.kyverno.io/severity: high
      policies.kyverno.io/title: Block Host Access
    creationTimestamp: "2026-08-09T02:57:31Z"
    generation: 3
    name: block-host-access
    resourceVersion: "3005851"
    uid: 6981354c-d8fc-4593-8154-8a5651bcc161
  spec:
    admission: true
    background: true
    emitWarning: false
    rules:
    - match:
        resources:
          kinds:
          - Pod
          namespaces:
          - hephastos
      name: check-hostpath
      skipBackgroundRequests: true
      validate:
        allowExistingViolations: true
        message: hostPath volumes are blocked. Use PVCs instead.
        pattern:
          spec:
            =(volumes):
            - X(hostPath): "null"
    - match:
        resources:
          kinds:
          - Pod
          namespaces:
          - hephastos
      name: block-hostnetwork
      skipBackgroundRequests: true
      validate:
        allowExistingViolations: true
        message: hostNetwork is blocked.
        pattern:
          spec:
            =(hostNetwork): "false"
    - match:
        resources:
          kinds:
          - Pod
          namespaces:
          - hephastos
      name: block-hostpid
      skipBackgroundRequests: true
      validate:
        allowExistingViolations: true
        message: hostPID is blocked.
        pattern:
          spec:
            =(hostPID): "false"
    validationFailureAction: Enforce
  status:
    autogen:
      rules:
      - match:
          resources:
            kinds:
            - apps/v1/DaemonSet
            - apps/v1/Deployment
            - batch/v1/Job
            - apps/v1/ReplicaSet
            - v1/ReplicationController
            - apps/v1/StatefulSet
            namespaces:
            - hephastos
        name: autogen-check-hostpath
        skipBackgroundRequests: true
        validate:
          allowExistingViolations: true
          message: hostPath volumes are blocked. Use PVCs instead.
          pattern:
            spec:
              template:
                spec:
                  =(volumes):
                  - X(hostPath): "null"
      - match:
          resources:
            kinds:
            - batch/v1/CronJob
            namespaces:
            - hephastos
        name: autogen-cronjob-check-hostpath
        skipBackgroundRequests: true
        validate:
          allowExistingViolations: true
          message: hostPath volumes are blocked. Use PVCs instead.
          pattern:
            spec:
              jobTemplate:
                spec:
                  template:
                    spec:
                      =(volumes):
                      - X(hostPath): "null"
      - match:
          resources:
            kinds:
            - apps/v1/DaemonSet
            - apps/v1/Deployment
            - batch/v1/Job
            - apps/v1/ReplicaSet
            - v1/ReplicationController
            - apps/v1/StatefulSet
            namespaces:
            - hephastos
        name: autogen-block-hostnetwork
        skipBackgroundRequests: true
        validate:
          allowExistingViolations: true
          message: hostNetwork is blocked.
          pattern:
            spec:
              template:
                spec:
                  =(hostNetwork): "false"
      - match:
          resources:
            kinds:
            - batch/v1/CronJob
            namespaces:
            - hephastos
        name: autogen-cronjob-block-hostnetwork
        skipBackgroundRequests: true
        validate:
          allowExistingViolations: true
          message: hostNetwork is blocked.
          pattern:
            spec:
              jobTemplate:
                spec:
                  template:
                    spec:
                      =(hostNetwork): "false"
      - match:
          resources:
            kinds:
            - apps/v1/DaemonSet
            - apps/v1/Deployment
            - batch/v1/Job
            - apps/v1/ReplicaSet
            - v1/ReplicationController
            - apps/v1/StatefulSet
            namespaces:
            - hephastos
        name: autogen-block-hostpid
        skipBackgroundRequests: true
        validate:
          allowExistingViolations: true
          message: hostPID is blocked.
          pattern:
            spec:
              template:
                spec:
                  =(hostPID): "false"
      - match:
          resources:
            kinds:
            - batch/v1/CronJob
            namespaces:
            - hephastos
        name: autogen-cronjob-block-hostpid
        skipBackgroundRequests: true
        validate:
          allowExistingViolations: true
          message: hostPID is blocked.
          pattern:
            spec:
              jobTemplate:
                spec:
                  template:
                    spec:
                      =(hostPID): "false"
    conditions:
    - lastTransitionTime: "2026-09-16T08:25:52Z"
      message: Ready
      reason: Succeeded
      status: "True"
      type: Ready
    rulecount:
      generate: 0
      mutate: 0
      validate: 3
      verifyimages: 0
    validatingadmissionpolicy:
      generated: false
      message: 'skip generating ValidatingAdmissionPolicy: multiple rules are not
        applicable.'
- apiVersion: kyverno.io/v1
  kind: ClusterPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"kyverno.io/v1","kind":"ClusterPolicy","metadata":{"annotations":{"policies.kyverno.io/category":"Pod Security","policies.kyverno.io/severity":"high","policies.kyverno.io/title":"Block Privileged Containers"},"name":"block-privileged-containers"},"spec":{"background":true,"rules":[{"match":{"resources":{"kinds":["Pod"],"namespaces":["hephastos"]}},"name":"check-privileged","validate":{"message":"Privileged containers are not allowed. Use least-privilege instead.","pattern": [...]
      policies.kyverno.io/category: Pod Security
      policies.kyverno.io/severity: high
      policies.kyverno.io/title: Block Privileged Containers
    creationTimestamp: "2026-08-09T02:57:31Z"
    generation: 3
    name: block-privileged-containers
    resourceVersion: "3005858"
    uid: 21dc0689-117c-4899-a50f-3194d90c040b
  spec:
    admission: true
    background: true
    emitWarning: false
    rules:
    - match:
        resources:
          kinds:
          - Pod
          namespaces:
          - hephastos
      name: check-privileged
      skipBackgroundRequests: true
      validate:
        allowExistingViolations: true
        message: Privileged containers are not allowed. Use least-privilege instead.
        pattern:
          spec:
            containers:
            - =(securityContext):
                =(privileged): "false"
    validationFailureAction: Enforce
  status:
    autogen:
      rules:
      - match:
          resources:
            kinds:
            - apps/v1/DaemonSet
            - apps/v1/Deployment
            - batch/v1/Job
            - apps/v1/ReplicaSet
            - v1/ReplicationController
            - apps/v1/StatefulSet
            namespaces:
            - hephastos
        name: autogen-check-privileged
        skipBackgroundRequests: true
        validate:
          allowExistingViolations: true
          message: Privileged containers are not allowed. Use least-privilege instead.
          pattern:
            spec:
              template:
                spec:
                  containers:
                  - =(securityContext):
                      =(privileged): "false"
      - match:
          resources:
            kinds:
            - batch/v1/CronJob
            namespaces:
            - hephastos
        name: autogen-cronjob-check-privileged
        skipBackgroundRequests: true
        validate:
          allowExistingViolations: true
          message: Privileged containers are not allowed. Use least-privilege instead.
          pattern:
            spec:
              jobTemplate:
                spec:
                  template:
                    spec:
                      containers:
                      - =(securityContext):
                          =(privileged): "false"
    conditions:
    - lastTransitionTime: "2026-09-16T08:25:52Z"
      message: Ready
      reason: Succeeded
      status: "True"
      type: Ready
    rulecount:
      generate: 0
      mutate: 0
      validate: 1
      verifyimages: 0
    validatingadmissionpolicy:
      generated: false
      message: skip generating ValidatingAdmissionPolicy for non CEL rules.
- apiVersion: kyverno.io/v1
  kind: ClusterPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"kyverno.io/v1","kind":"ClusterPolicy","metadata":{"annotations":{"policies.kyverno.io/category":"Pod Security","policies.kyverno.io/severity":"medium","policies.kyverno.io/title":"Drop All Linux Capabilities"},"name":"drop-all-linux-capabilities"},"spec":{"background":true,"rules":[{"match":{"resources":{"kinds":["Pod"],"namespaces":["hephastos"]}},"name":"check-capabilities","validate":{"message":"All Linux capabilities must be dropped. Add only what your app needs.","pat [...]
      policies.kyverno.io/category: Pod Security
      policies.kyverno.io/severity: medium
      policies.kyverno.io/title: Drop All Linux Capabilities
    creationTimestamp: "2026-08-09T02:57:31Z"
    generation: 2
    name: drop-all-linux-capabilities
    resourceVersion: "3005859"
    uid: c8e1ebc4-9143-4b63-99ee-687499c6c7df
  spec:
    admission: true
    background: true
    emitWarning: false
    rules:
    - match:
        resources:
          kinds:
          - Pod
          namespaces:
          - hephastos
      name: check-capabilities
      skipBackgroundRequests: true
      validate:
        allowExistingViolations: true
        message: All Linux capabilities must be dropped. Add only what your app needs.
        pattern:
          spec:
            containers:
            - securityContext:
                capabilities:
                  drop:
                  - ALL
    validationFailureAction: Enforce
  status:
    autogen:
      rules:
      - match:
          resources:
            kinds:
            - apps/v1/DaemonSet
            - apps/v1/Deployment
            - batch/v1/Job
            - apps/v1/ReplicaSet
            - v1/ReplicationController
            - apps/v1/StatefulSet
            namespaces:
            - hephastos
        name: autogen-check-capabilities
        skipBackgroundRequests: true
        validate:
          allowExistingViolations: true
          message: All Linux capabilities must be dropped. Add only what your app
            needs.
          pattern:
            spec:
              template:
                spec:
                  containers:
                  - securityContext:
                      capabilities:
                        drop:
                        - ALL
      - match:
          resources:
            kinds:
            - batch/v1/CronJob
            namespaces:
            - hephastos
        name: autogen-cronjob-check-capabilities
        skipBackgroundRequests: true
        validate:
          allowExistingViolations: true
          message: All Linux capabilities must be dropped. Add only what your app
            needs.
          pattern:
            spec:
              jobTemplate:
                spec:
                  template:
                    spec:
                      containers:
                      - securityContext:
                          capabilities:
                            drop:
                            - ALL
    conditions:
    - lastTransitionTime: "2026-09-16T08:25:53Z"
      message: Ready
      reason: Succeeded
      status: "True"
      type: Ready
    rulecount:
      generate: 0
      mutate: 0
      validate: 1
      verifyimages: 0
    validatingadmissionpolicy:
      generated: false
      message: skip generating ValidatingAdmissionPolicy for non CEL rules.
- apiVersion: kyverno.io/v1
  kind: ClusterPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"kyverno.io/v1","kind":"ClusterPolicy","metadata":{"annotations":{"policies.kyverno.io/category":"Image Security","policies.kyverno.io/severity":"medium","policies.kyverno.io/title":"Require Specific Image Tags"},"name":"require-image-tag"},"spec":{"background":true,"rules":[{"match":{"resources":{"kinds":["Pod"],"namespaces":["hephastos"]}},"name":"check-image-tag","validate":{"message":"Image must not use :latest tag. Pin to a specific version.","pattern":{"spec":{"contai [...]
      policies.kyverno.io/category: Image Security
      policies.kyverno.io/severity: medium
      policies.kyverno.io/title: Require Specific Image Tags
    creationTimestamp: "2026-08-09T02:57:31Z"
    generation: 2
    name: require-image-tag
    resourceVersion: "3005860"
    uid: b04ca6e4-88c1-4444-9616-e88535d3d20a
  spec:
    admission: true
    background: true
    emitWarning: false
    rules:
    - match:
        resources:
          kinds:
          - Pod
          namespaces:
          - hephastos
      name: check-image-tag
      skipBackgroundRequests: true
      validate:
        allowExistingViolations: true
        message: Image must not use :latest tag. Pin to a specific version.
        pattern:
          spec:
            containers:
            - image: '!*latest'
    validationFailureAction: Enforce
  status:
    autogen:
      rules:
      - match:
          resources:
            kinds:
            - apps/v1/DaemonSet
            - apps/v1/Deployment
            - batch/v1/Job
            - apps/v1/ReplicaSet
            - v1/ReplicationController
            - apps/v1/StatefulSet
            namespaces:
            - hephastos
        name: autogen-check-image-tag
        skipBackgroundRequests: true
        validate:
          allowExistingViolations: true
          message: Image must not use :latest tag. Pin to a specific version.
          pattern:
            spec:
              template:
                spec:
                  containers:
                  - image: '!*latest'
      - match:
          resources:
            kinds:
            - batch/v1/CronJob
            namespaces:
            - hephastos
        name: autogen-cronjob-check-image-tag
        skipBackgroundRequests: true
        validate:
          allowExistingViolations: true
          message: Image must not use :latest tag. Pin to a specific version.
          pattern:
            spec:
              jobTemplate:
                spec:
                  template:
                    spec:
                      containers:
                      - image: '!*latest'
    conditions:
    - lastTransitionTime: "2026-09-16T08:25:53Z"
      message: Ready
      reason: Succeeded
      status: "True"
      type: Ready
    rulecount:
      generate: 0
      mutate: 0
      validate: 1
      verifyimages: 0
    validatingadmissionpolicy:
      generated: false
      message: skip generating ValidatingAdmissionPolicy for non CEL rules.
- apiVersion: kyverno.io/v1
  kind: ClusterPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"kyverno.io/v1","kind":"ClusterPolicy","metadata":{"annotations":{"policies.kyverno.io/category":"Best Practice","policies.kyverno.io/severity":"low","policies.kyverno.io/title":"Require Namespace Label"},"name":"require-namespace-label"},"spec":{"background":false,"rules":[{"match":{"resources":{"kinds":["Namespace"]}},"name":"check-namespace-label","validate":{"message":"Namespaces must be labeled with 'purpose' (dev|staging|prod).","pattern":{"metadata":{"labels":{"purpo [...]
      policies.kyverno.io/category: Best Practice
      policies.kyverno.io/severity: low
      policies.kyverno.io/title: Require Namespace Label
    creationTimestamp: "2026-08-09T02:58:34Z"
    generation: 2
    name: require-namespace-label
    resourceVersion: "3005852"
    uid: 42e57b4d-a40d-459c-96fa-624b4c6488f8
  spec:
    admission: true
    background: false
    emitWarning: false
    rules:
    - match:
        resources:
          kinds:
          - Namespace
      name: check-namespace-label
      skipBackgroundRequests: true
      validate:
        allowExistingViolations: true
        message: Namespaces must be labeled with 'purpose' (dev|staging|prod).
        pattern:
          metadata:
            labels:
              purpose: ?*
    validationFailureAction: Audit
  status:
    autogen: {}
    conditions:
    - lastTransitionTime: "2026-09-16T08:25:52Z"
      message: Ready
      reason: Succeeded
      status: "True"
      type: Ready
    rulecount:
      generate: 0
      mutate: 0
      validate: 1
      verifyimages: 0
    validatingadmissionpolicy:
      generated: false
      message: skip generating ValidatingAdmissionPolicy for non CEL rules.
- apiVersion: kyverno.io/v1
  kind: ClusterPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"kyverno.io/v1","kind":"ClusterPolicy","metadata":{"annotations":{"policies.kyverno.io/category":"Pod Security","policies.kyverno.io/severity":"high","policies.kyverno.io/title":"Require Non-Root User"},"name":"require-non-root-user"},"spec":{"background":true,"rules":[{"match":{"resources":{"kinds":["Pod"],"namespaces":["hephastos"]}},"name":"check-runasnonroot","validate":{"message":"Containers must run as non-root user. Set securityContext.runAsNonRoot: true on pod or co [...]
      policies.kyverno.io/category: Pod Security
      policies.kyverno.io/severity: high
      policies.kyverno.io/title: Require Non-Root User
    creationTimestamp: "2026-08-09T02:57:31Z"
    generation: 3
    name: require-non-root-user
    resourceVersion: "3005853"
    uid: 23c9ac43-5b3b-474f-836e-e8a45319d82f
  spec:
    admission: true
    background: true
    emitWarning: false
    rules:
    - match:
        resources:
          kinds:
          - Pod
          namespaces:
          - hephastos
      name: check-runasnonroot
      skipBackgroundRequests: true
      validate:
        allowExistingViolations: true
        message: 'Containers must run as non-root user. Set securityContext.runAsNonRoot:
          true on pod or container.'
        pattern:
          spec:
            containers:
            - securityContext:
                runAsNonRoot: true
    validationFailureAction: Enforce
  status:
    autogen:
      rules:
      - match:
          resources:
            kinds:
            - apps/v1/DaemonSet
            - apps/v1/Deployment
            - batch/v1/Job
            - apps/v1/ReplicaSet
            - v1/ReplicationController
            - apps/v1/StatefulSet
            namespaces:
            - hephastos
        name: autogen-check-runasnonroot
        skipBackgroundRequests: true
        validate:
          allowExistingViolations: true
          message: 'Containers must run as non-root user. Set securityContext.runAsNonRoot:
            true on pod or container.'
          pattern:
            spec:
              template:
                spec:
                  containers:
                  - securityContext:
                      runAsNonRoot: true
      - match:
          resources:
            kinds:
            - batch/v1/CronJob
            namespaces:
            - hephastos
        name: autogen-cronjob-check-runasnonroot
        skipBackgroundRequests: true
        validate:
          allowExistingViolations: true
          message: 'Containers must run as non-root user. Set securityContext.runAsNonRoot:
            true on pod or container.'
          pattern:
            spec:
              jobTemplate:
                spec:
                  template:
                    spec:
                      containers:
                      - securityContext:
                          runAsNonRoot: true
    conditions:
    - lastTransitionTime: "2026-09-16T08:25:52Z"
      message: Ready
      reason: Succeeded
      status: "True"
      type: Ready
    rulecount:
      generate: 0
      mutate: 0
      validate: 1
      verifyimages: 0
    validatingadmissionpolicy:
      generated: false
      message: skip generating ValidatingAdmissionPolicy for non CEL rules.
- apiVersion: kyverno.io/v1
  kind: ClusterPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"kyverno.io/v1","kind":"ClusterPolicy","metadata":{"annotations":{"policies.kyverno.io/category":"Pod Security","policies.kyverno.io/severity":"high","policies.kyverno.io/title":"Require Read-Only Root Filesystem"},"name":"require-read-only-root-filesystem"},"spec":{"background":true,"rules":[{"match":{"resources":{"kinds":["Pod"],"namespaces":["hephastos"]}},"name":"check-rofs","validate":{"message":"Read-only root filesystem is required. Set securityContext.readOnlyRootFi [...]
      policies.kyverno.io/category: Pod Security
      policies.kyverno.io/severity: high
      policies.kyverno.io/title: Require Read-Only Root Filesystem
    creationTimestamp: "2026-08-09T03:10:15Z"
    generation: 2
    name: require-read-only-root-filesystem
    resourceVersion: "3005855"
    uid: 90db0354-b853-460a-8317-86371be56ec6
  spec:
    admission: true
    background: true
    emitWarning: false
    rules:
    - match:
        resources:
          kinds:
          - Pod
          namespaces:
          - hephastos
      name: check-rofs
      skipBackgroundRequests: true
      validate:
        allowExistingViolations: true
        message: 'Read-only root filesystem is required. Set securityContext.readOnlyRootFilesystem:
          true'
        pattern:
          spec:
            containers:
            - securityContext:
                readOnlyRootFilesystem: true
    validationFailureAction: Enforce
  status:
    autogen:
      rules:
      - match:
          resources:
            kinds:
            - apps/v1/DaemonSet
            - apps/v1/Deployment
            - batch/v1/Job
            - apps/v1/ReplicaSet
            - v1/ReplicationController
            - apps/v1/StatefulSet
            namespaces:
            - hephastos
        name: autogen-check-rofs
        skipBackgroundRequests: true
        validate:
          allowExistingViolations: true
          message: 'Read-only root filesystem is required. Set securityContext.readOnlyRootFilesystem:
            true'
          pattern:
            spec:
              template:
                spec:
                  containers:
                  - securityContext:
                      readOnlyRootFilesystem: true
      - match:
          resources:
            kinds:
            - batch/v1/CronJob
            namespaces:
            - hephastos
        name: autogen-cronjob-check-rofs
        skipBackgroundRequests: true
        validate:
          allowExistingViolations: true
          message: 'Read-only root filesystem is required. Set securityContext.readOnlyRootFilesystem:
            true'
          pattern:
            spec:
              jobTemplate:
                spec:
                  template:
                    spec:
                      containers:
                      - securityContext:
                          readOnlyRootFilesystem: true
    conditions:
    - lastTransitionTime: "2026-09-16T08:25:52Z"
      message: Ready
      reason: Succeeded
      status: "True"
      type: Ready
    rulecount:
      generate: 0
      mutate: 0
      validate: 1
      verifyimages: 0
    validatingadmissionpolicy:
      generated: false
      message: skip generating ValidatingAdmissionPolicy for non CEL rules.
kind: List
metadata:
  resourceVersion: ""
